MYFACES-4323: fix it for windows